[package]
name = "wxrust-base"
version = "0.0.1-alpha"
edition = "2021"
description = "Binding for the (part of) wxBase library of the wxWidgets toolkit."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = [
    "wxrust-config/vendored",
    "dep:wx-universal-apple-darwin",
    "dep:wx-x86_64-pc-windows-gnu",
    "dep:wx-x86_64-pc-windows-msvc",
]

[target.'cfg(target_os = "macos")'.dependencies]
wx-universal-apple-darwin = { git = "https://github.com/ancwrd1/wx-universal-apple-darwin", optional = true }

[target.x86_64-pc-windows-gnu.dependencies]
wx-x86_64-pc-windows-gnu = { git = "https://github.com/ancwrd1/wx-x86_64-pc-windows-gnu", optional = true }

[target.x86_64-pc-windows-msvc.dependencies]
wx-x86_64-pc-windows-msvc = { git = "https://github.com/kenz-gelsoft/wx-x86_64-pc-windows-msvc", optional = true }

[build-dependencies]
cc = "1.0.72"
wxrust-config = "0.0.*"
