[package]
name = "wxrust"
version = "0.0.1-alpha"
edition = "2021"
description = "Binding for the wxCore library of the wxWidgets toolkit."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = [
    "wxrust-config/vendored",
    "dep:wx-universal-apple-darwin",
    "dep:wx-x86_64-pc-windows-gnu",
]

[dependencies]
wx-base = { path = "../wx-base", package="wxrust-base" }

[target.'cfg(target_os = "macos")'.dependencies]
wx-universal-apple-darwin = { git = "https://github.com/ancwrd1/wx-universal-apple-darwin", optional = true }

[target.x86_64-pc-windows-gnu.dependencies]
wx-x86_64-pc-windows-gnu = { git = "https://github.com/ancwrd1/wx-x86_64-pc-windows-gnu", optional = true }

[build-dependencies]
cc = "1.0.72"
# wxrust-config = "0.0.1-alpha2"
wxrust-config = { git = "https://github.com/kenz-gelsoft/wx-x86_64-pc-windows-msvc", branch = "runtime_api" }
