[package]
name = "wxrust"
version = "0.0.1-alpha"
edition = "2021"
description = "Binding for the wxCore library of the wxWidgets toolkit."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = [
    "wxrust-config/vendored",
]

[dependencies]
wx-base = { version = "0.0.1-alpha", package = "wxrust-base" }
# wx-base = { path = "../wx-base", package="wxrust-base" }

[build-dependencies]
cc = "1.0.72"
wxrust-config = "0.0.1-alpha2"
