[package]
name = "wxrust-config"
version = "0.0.1-alpha2"
edition = "2021"
description = "Build support crate for wxrust packages."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = []

[dependencies]
cc = "1.0.72"
